--- a/pom.xml
+++ b/pom.xml
@@ -27,5 +27,12 @@
             <artifactId>postgresql</artifactId>
             <version>42.7.7</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-nop</artifactId>
+            <version>2.0.9</version>
+        </dependency>
+
     </dependencies>
 </project>
