--- a/pom.xml
+++ b/pom.xml
@@ -34,5 +34,10 @@
             <version>2.0.9</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>5.5.1</version>
+        </dependency>
     </dependencies>
 </project>
